feat: Adding Open Graph support

--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -32,3 +32,4 @@
 
 <meta name="dcterms.issued" title="W3CDTF" content="{{ page.date }}"/>
 <meta name="dcterms.modified" title="W3CDTF" content="{%- if page.dateModified -%}{{ page.dateModified }}{% else %}{{ page.date }}{%- endif -%}"/>
+{% seo %}
