chore: Add Google Search Console verification

--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -11,7 +11,7 @@
 <head>
 <meta charset="utf-8">
 {% include license.html %}
-<title>{{ page-title }} - {{ i18nText-siteTitle }}</title>
+<title>{{ page-title }} | {{ site.title[ page.lang ] }}</title>
 <meta content="width=device-width, initial-scale=1" name="viewport">
 {% include metadata.html %}
 {% include resources-inc/head.html %}
