--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -1,28 +1,26 @@
 <link rel="canonical" href="{{ page.url | remove_first: '/' | remove_first: page.lang | prepend: site.urlalt[ page.lang ] }}" />
 <link rel="alternate" href="{{ page.altLangPage | prepend: site.urlalt[ i18nText-altLang ] }}" hreflang="{{ i18nText-altLang }}" />
+
 {%- if page.description -%}
 <meta name="description" content="{{ page.description }}" />
+<meta property="og:description" content="{{ page.description }}" />
   {% elsif site.description %}
 <meta name="description" content="{{ site.description[ page.lang ] }}" />
-{%- endif -%}
-
-{%- if page.author -%}
-<meta name="author" content="{{ page.author }}"/>
-  {% elsif site.author %}
-<meta name="author" content="{{ site.author[ page.lang ] }}" />
 {%- endif -%}
 
 <meta name="dcterms.title" content="{{ page.title }}"/>
 {%- if page.description -%}
 <meta name="dcterms.description" content="{{ page.description }}"/>
-  {% elsif site.description %}
+{% elsif site.description %}
 <meta name="dcterms.description" content="{{ site.description[ page.lang ] }}" />
 {%- endif -%}
 
 {%- if page.author -%}
 <meta name="dcterms.creator" content="{{ page.author }}"/>
-  {% elsif site.author %}
+<meta name="author" content="{{ page.author }}"/>
+{% elsif site.author %}
 <meta name="dcterms.creator" content="{{ site.author[ page.lang ] }}"/>
+<meta name="author" content="{{ site.author[ page.lang ] }}" />
 {%- endif -%}
 
 <meta name="dcterms.language" title="ISO639-2/T" content="{{ site.language[ page.lang ] | downcase | truncate: 3, '' }}"/>
@@ -32,4 +30,88 @@
 
 <meta name="dcterms.issued" title="W3CDTF" content="{{ page.date }}"/>
 <meta name="dcterms.modified" title="W3CDTF" content="{%- if page.dateModified -%}{{ page.dateModified }}{% else %}{{ page.date }}{%- endif -%}"/>
-{% seo %}
+<meta name="generator" content="Jekyll v{{ jekyll.version }}" />
+
+{%- if page.title -%}
+<meta property="og:title" content="{{ page.title | append: " | " | append: site.title[ page.lang ] }}" />
+<meta property="twitter:title" content="{{ page.title }}" />
+{%- endif -%}
+<meta property="og:locale" content='{{ page.lang | append: '_CA' }}' />
+{%- if site.url -%}
+<meta property="og:url" content="{{ page.url | remove_first: '/' | remove_first: page.lang | prepend: site.urlalt[ page.lang ] }}" />
+{%- endif -%}
+{%- if page.image -%}
+<meta property="og:image" content="{{ page.image.path }}" />
+	{%- if page.image.height -%}
+<meta property="og:image:height" content="{{ page.image.height }}" />
+	{%- endif -%}
+	{%- if page.image.width -%}
+<meta property="og:image:width" content="{{ page.image.width }}" />
+	{%- endif -%}
+	{%- if page.image.alt -%}
+<meta property="og:image:alt" content="{{ page.image.alt }}" />
+	{%- endif -%}
+<meta name="twitter:card" content="{{ page.twitter.card | default: site.twitter.card | default: "summary_large_image" }}" />
+<meta property="twitter:image" content="{{ page.image.path }}" />
+  {%- else -%}
+<meta name="twitter:card" content="summary" />
+{%- endif -%}
+{%- if page.image.alt -%}
+<meta name="twitter:image:alt" content="{{ page.image.alt }}" />
+{%- endif -%}
+
+{%- if page.date -%}
+<meta property="og:type" content="article" />
+<meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+{%- else -%}
+<meta property="og:type" content="website" />
+{%- endif -%}
+{%- if site.title -%}
+<meta property="og:site_name" content="{{ site.title[ page.lang ] }}" />
+{%- endif -%}
+{%- if paginator.previous_page -%}
+<link rel="prev" href="{{ paginator.previous_page_path | absolute_url }}" />
+{%- endif -%}
+{%- if paginator.next_page -%}
+<link rel="next" href="{{ paginator.next_page_path | absolute_url }}" />
+{%- endif -%}
+{%- if site.twitter -%}
+<meta name="twitter:site" content="@{{ site.twitter.username | remove:'@' }}" />
+  {%- if page.author.twitter -%}
+<meta name="twitter:creator" content="@{{ page.author.twitter | remove:'@' }}" />
+  {%- endif -%}
+{%- endif -%}
+
+{%- if site.facebook -%}
+  {%- if site.facebook.admins -%}
+<meta property="fb:admins" content="{{ site.facebook.admins }}" />
+  {%- endif -%}
+  {%- if site.facebook.publisher -%}
+<meta property="article:publisher" content="{{ site.facebook.publisher }}" />
+  {%- endif -%}
+  {%- if site.facebook.app_id -%}
+<meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
+  {%- endif -%}
+{%- endif -%}
+{%- if site.webmaster_verifications -%}
+  {%- if site.webmaster_verifications.google -%}
+<meta name="google-site-verification" content="{{ site.webmaster_verifications.google }}" />
+  {%- endif -%}
+  {%- if site.webmaster_verifications.bing -%}
+<meta name="msvalidate.01" content="{{ site.webmaster_verifications.bing }}" />
+  {%- endif -%}
+  {%- if site.webmaster_verifications.yandex -%}
+<meta name="yandex-verification" content="{{ site.webmaster_verifications.yandex }}" />
+  {%- endif -%}
+  {%- if site.webmaster_verifications.baidu -%}
+<meta name="baidu-site-verification" content="{{ site.webmaster_verifications.baidu }}" />
+  {%- endif -%}
+  {%- if site.webmaster_verifications.facebook -%}
+<meta name="facebook-domain-verification" content="{{ site.webmaster_verifications.facebook }}" />
+  {%- endif -%}
+{%- elsif site.google_site_verification -%}
+  <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
+{%- endif -%}
+{%- if page.layout == "post" -%}
+  {%- include json-ld-page.html -%}
+{%- endif -%}
