--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,88 +9,7 @@ layout: default
 			{{ content }}
 		</div>
 	</article>
-	<aside>
-		<h2 id="{{ locales.connect[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.connect[ page.lang ] }}</h2>
-		<ul>
-			<li>{{ locales.email[ page.lang ] }}: <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a></li>
-			<li>{{ locales.twitter[ page.lang ] }}: {{ locales.twitterhandle[ page.lang ] }}</li>
-			<li>{{ locales.slack[ page.lang ] }}: <a href="https://design-gc-conception.slack.com/join/shared_invite/enQtODE1OTc5Mzg5NzQ4LWQ3MjZjMTdjMjk2ZTZmMTJjYWQ3ZmRiNDYwYjRmN2NjYzQyNjFlNDBlY2FkNWE1ODg2YjExY2QwZmVjN2MwMGM">http://design-GC-conception.slack.com</a></li>
-			<li>{{ locales.signup[ page.lang ] }}:
-				<ul class="list-unstyled">
-					<li>
-						<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
-							<div id="mc_embed_signup_scroll" class="well well-sm">
-								<fieldset class="gc-chckbxrdio">
-									<legend>{{ locales.emailtype[ page.lang ] }}</legend>
-									<ul class="list-unstyled lst-spcd-2">
-										<li class="radio">
-											<input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0">
-											<label for="mce-EMAILTYPE-0">{{ locales.emailtype1[ page.lang ] }}</label>
-										</li>
-										<li class="radio">
-											<input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1">
-											<label for="mce-EMAILTYPE-1">{{ locales.emailtype2[ page.lang ] }} <small>{{ locales.emailtype-cmmt[ page.lang ] }}</small></label>
-										</li>
-									</ul>
-								</fieldset>
-								<div class="mc-field-group">
-									<div class="input-group">
-										<label class="wb-inv" for="mce-EMAIL">{{ locales.mce-email[ page.lang ] }}</label>
-										<input type="email" value="" name="EMAIL" class="form-control required email" id="mce-EMAIL" placeholder="{{ locales.mce-email[ page.lang ] }}">
-										<span class="input-group-btn">
-											<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success nowrap">{{ locales.subscribe[ page.lang ] }}</button>
-										</span>
-									</div>
-								</div>
-								<div id="mce-responses" class="clear">
-									<div class="response" id="mce-error-response" style="display:none"></div>
-									<div class="response" id="mce-success-response" style="display:none"></div>
-								</div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-								<div style="position: absolute; left: -5000px;" aria-hidden="true">
-									<input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value="">
-								</div>
-							</div>
-						</form>
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-		<script type='text/javascript'>
-			( function( $ ) {
-				window.fnames = new Array();
-				window.ftypes = new Array();
-				fnames[ 0 ]='EMAIL';
-				ftypes[ 0 ]='email';
-				fnames[ 1 ]='FNAME';
-				ftypes[ 1 ]='text';
-				fnames[ 2 ]='LNAME';
-				ftypes[ 2 ]='text';
-				fnames[ 3 ]='ADDRESS';
-				ftypes[ 3 ]='address';
-				fnames[ 4 ]='PHONE';
-				ftypes[ 4 ]='phone';
-				fnames[ 5 ]='BIRTHDAY';
-				ftypes[ 5 ]='birthday';
-			}( jQuery ));
-			var $mcj = jQuery.noConflict( true );
-		</script>
-		<!--End mc_embed_signup-->
-		<div class="mce-privacy" style="padding-top: 9px;">
-			<a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Privacy Statement Link">{{ locales.privacy-notice[ page.lang ] }}</a>
-		</div>
-		<section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
-			<header class="modal-header">
-				<h2 class="modal-title">{{ locales.privacy-notice[ page.lang ] }}</h2>
-			</header>
-			<div class="modal-body">
-				<p>{{ locales.privacy-notice1[ page.lang ] }}</p>
-				<p>{{ locales.privacy-notice2[ page.lang ] }}</p>
-				<p>{{ locales.privacy-notice3[ page.lang ] }}</p>
-				<p>{{ locales.privacy-notice4[ page.lang ] }}</p>
-			</div>
-		</section>
-	</aside>
+	{% include signup-form.html %}
 </div>
 <nav class="mrgn-tp-xl">
 	<h2 class="wb-inv">{{ locales.navigation[ page.lang ] }}</h2>
