chore: Refactor images patterns Create gc-complex-img and gc-simple-img pattern Update posts to adopt new image patterns

--- a/_includes/components/gc-complex-img.html
+++ b/_includes/components/gc-complex-img.html
@@ -1,5 +1,6 @@
+{%- assign file = site.static_files | where: "lang", page.lang | find_exp: "item", "item.path contains filename" -%}
 <figure class="gc-complex-img" role="group">
-	<img alt="{{ include.alt }}" src="{{ include.file }}">
+	<img alt="{{ include.alt }}" src="{{ file.path }}">
 	<figcaption>
 		{%- if include.summary -%}
 			{%- if include.caption != "" -%}
