--- a/_includes/language/languagetoggle.html
+++ b/_includes/language/languagetoggle.html
@@ -2,7 +2,7 @@
 	<h2 class="wb-inv">{{ i18nText-language }}</h2>
 	<ul class="list-inline mrgn-bttm-0">
 		<li>
-			<a lang="{{ i18nText-altLang }}" hreflang="{{ i18nText-altLang }}" href="{{ site.urlalt[ i18nText-altLang ] }}{{ page.altLangPage }}">
+			<a lang="{{ i18nText-altLang }}" hreflang="{{ i18nText-altLang }}" href="{{ site.urlalt[ i18nText-altLang ] }}{{ page.altLangPage }}.html">
 				<span class="hidden-xs">{{ i18nText-altLanguage }}</span>
 				<abbr title="{{ i18nText-altLanguage }}" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">{{ i18nText-altLang }}</abbr>
 			</a>
