--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -21,7 +21,7 @@
 {%- if page.archived -%}
 	{% include headers-includes/archive.html %}
 {%- endif -%}
-{% include sites/inc-skiplinks.html %}
+{% include skiplinks/skiplinks.html %}
 {% include header/header.html %}
 {{ content }}
 {% include footers/footer.html %}
