feat: Adobe Analytics support
Update _config.yml with analytics values
Update logic in analytics.html to support multiple provider
Update metadata.html to add required metadata
Update adobehead.html to support ENV string variables
Add netlify.toml to run staging environment command
Add _config_staging.yml to configure staging environment variables

--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -26,6 +26,10 @@
 {%- endif %}
 <meta name="dcterms.issued" title="W3CDTF" content="{{ page.date }}"/>
 <meta name="dcterms.modified" title="W3CDTF" content="{% if page.dateModified %}{{ page.dateModified }}{% else %}{{ page.date }}{%- endif -%}"/>
+{%- if site.analytics.providers contains 'adobe' %}
+<meta name="dcterms.accessRights" content="{{ page.accessRights | default: '2' }}">
+<meta name="dcterms.service" content="{{ site.analytics.adobe.service }}">
+{%- endif %}
 <meta name="generator" content="Jekyll v{{ jekyll.version }}" />
 {%- if page.title %}
 <meta property="og:title" content="{{ page.title }}" />
