--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,12 +1,14 @@
-	{% case site.analytics.provider %}
-	{% when "google" %}
-	  {% include /providers/google.html %}
-	{% when "google-universal" %}
-	  {% include /providers/google-universal.html %}
-	{% when "google-gtag" %}
-	  {% include /providers/google-gtag.html %}
-	{% when "adobe" %}
-	  {% include /providers/adobehead.html %}
-	{% when "custom" %}
-	  {% include /providers/custom.html %}
-	{% endcase %}
+{%- for provider in site.analytics.providers -%}
+	{%- case provider -%}
+		{%- when "google" -%}
+{% include /providers/google.html %}
+		{%- when "google-universal" -%}
+{% include /providers/google-universal.html %}
+		{%- when "google-gtag" -%}
+{% include /providers/google-gtag.html %}
+		{%- when "adobe" -%}
+{% include /providers/adobehead.html tracking=site.analytics.adobe.tracking_id %}
+		{%- when "custom" -%}
+{% include /providers/custom.html %}
+	{%- endcase -%}
+{%- endfor -%}
