--- a/_layouts/post-01.html
+++ b/_layouts/post-01.html
@@ -10,7 +10,50 @@ layout: default
 		</div>
 	</article>
 	<aside>
-			<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+		<h2 id="{{ locales.connect[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.connect[ page.lang ] }}</h2>
+		<ul>
+			
+			<li>{{ locales.signup[ page.lang ] }}:
+				<ul class="list-unstyled">
+					<li>
+						<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
+							<div id="mc_embed_signup_scroll" class="well well-sm">
+								<fieldset class="gc-chckbxrdio">
+									<legend>{{ locales.emailtype[ page.lang ] }}</legend>
+									<ul class="list-unstyled lst-spcd-2">
+										<li class="radio">
+											<input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0">
+											<label for="mce-EMAILTYPE-0">{{ locales.emailtype1[ page.lang ] }}</label>
+										</li>
+										<li class="radio">
+											<input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1">
+											<label for="mce-EMAILTYPE-1">{{ locales.emailtype2[ page.lang ] }} <small>{{ locales.emailtype-cmmt[ page.lang ] }}</small></label>
+										</li>
+									</ul>
+								</fieldset>
+								<div class="mc-field-group">
+									<div class="input-group">
+										<label class="wb-inv" for="mce-EMAIL">{{ locales.mce-email[ page.lang ] }}</label>
+										<input type="email" value="" name="EMAIL" class="form-control required email" id="mce-EMAIL" placeholder="{{ locales.mce-email[ page.lang ] }}">
+										<span class="input-group-btn">
+											<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success nowrap">{{ locales.subscribe[ page.lang ] }}</button>
+										</span>
+									</div>
+								</div>
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								<div style="position: absolute; left: -5000px;" aria-hidden="true">
+									<input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value="">
+								</div>
+							</div>
+						</form>
+					</li>
+				</ul>
+			</li>
+		</ul>
+		<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 		<script type='text/javascript'>
 			( function( $ ) {
 				window.fnames = new Array();
@@ -79,3 +122,8 @@ layout: default
 		{%- endfor -%}
 	</ul>
 </nav>
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
