--- a/_layouts/post-01.html
+++ b/_layouts/post-01.html
@@ -10,12 +10,7 @@ layout: default
 		</div>
 	</article>
 	<aside>
-		<h2 id="{{ locales.connect[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.connect[ page.lang ] }}</h2>
-		<ul>
-			
-			<li>{{ locales.signup[ page.lang ] }}:
-				<ul class="list-unstyled">
-					<li>
+		<h2 id="{{ locales.signup[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.signup[ page.lang ] }}</h2>
 						<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="well well-sm">
 								<fieldset class="gc-chckbxrdio">
@@ -49,10 +44,7 @@ layout: default
 								</div>
 							</div>
 						</form>
-					</li>
-				</ul>
-			</li>
-		</ul>
+		
 		<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 		<script type='text/javascript'>
 			( function( $ ) {
