--- a/_layouts/post-01.html
+++ b/_layouts/post-01.html
@@ -11,7 +11,9 @@ layout: default-01
 	</article>
 	<aside>
 		<h2 id="{{ locales.signup[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.signup[ page.lang ] }}</h2>
-						<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
+		
+						<ul class="list-unstyled">
+  <li><form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="well well-sm">
 								<fieldset class="gc-chckbxrdio">
 									<legend>{{ locales.emailtype[ page.lang ] }}</legend>
@@ -43,7 +45,8 @@ layout: default-01
 									<input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value="">
 								</div>
 							</div>
-						</form>
+	  </form></li>
+		</ul>
 		
 		<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 		<script type='text/javascript'>
