--- a/_layouts/post-01.html
+++ b/_layouts/post-01.html
@@ -12,7 +12,7 @@ layout: default-01
 	<aside>
 		<h2 id="{{ locales.signup[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.signup[ page.lang ] }}</h2>
 		
-						<ul class="list-unstyled">
+						<ul class="list-unstyled mrgn-tp-lg">
   <li><form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="well well-sm">
 								<fieldset class="gc-chckbxrdio">
