--- a/_includes/footers/footer.html
+++ b/_includes/footers/footer.html
@@ -3,7 +3,21 @@
 	<div class="gc-contextual">
 		<div class="container">
 			<nav>
-				<h3>{{ contextualFooterTitle }}</h3>
+				
+				{%- if i18nText-lang == "fr" -%}
+				
+				{%- elsif i18nText-lang == "en" -%}
+				<h3>Digital Transformation Office</h3>
+				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
+					<li><a href="mailto:dto.btn@tbs-sct.gc.ca">Contact DTO</a></li>
+					<li><span class="fab fa-twitter-square mrgn-rght-sm"></span> #CanadaDotCa</li>
+					<li><span class="fab fa-slack mrgn-rght-sm"></span> <a href="http://design-GC-conception.slack.com">http://design-GC-conception.slack.com</a></li>
+			
+				</ul>
+				{%- endif -%}
+				
+				
+			
 				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
 					{%- if page.contextualFooter.links -%}
 						{%- for link in page.contextualFooter.links -%}
