--- a/_includes/footers/footer.html
+++ b/_includes/footers/footer.html
@@ -11,7 +11,7 @@
 				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
 					<li><a href="mailto:dto.btn@tbs-sct.gc.ca">Contact DTO</a></li>
 					<li><span class="fab fa-twitter-square mrgn-rght-sm"></span> #CanadaDotCa</li>
-					<li><span class="fab fa-slack mrgn-rght-sm"></span> <a href="http://design-GC-conception.slack.com">http://design-GC-conception.slack.com</a></li>
+					<li><span class="fab fa-slack mrgn-rght-sm"></span> <a href="http://design-GC-conception.slack.com">design-GC-conception</a></li>
 			
 				</ul>
 				{%- endif -%}
