--- a/_includes/footers/footer.html
+++ b/_includes/footers/footer.html
@@ -10,8 +10,8 @@
 				<h3>Digital Transformation Office</h3>
 				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
 					<li><a href="mailto:dto.btn@tbs-sct.gc.ca">Contact DTO</a></li>
-					<li><span class="fab fa-twitter-square mrgn-rght-sm"></span> #CanadaDotCa</li>
-					<li><span class="fab fa-slack mrgn-rght-sm"></span> <a href="http://design-GC-conception.slack.com">design-GC-conception</a></li>
+					<li><a href="https://twitter.com/hashtag/Canadadotca?src=hashtag_click"><span class="fab fa-twitter-square mrgn-rght-sm"></span> #CanadaDotCa</a></li>
+					<li><a href="http://design-GC-conception.slack.com"><span class="fab fa-slack mrgn-rght-sm"></span> design-GC-conception</a></li>
 			
 				</ul>
 				{%- endif -%}
