--- a/_layouts/core-01.html
+++ b/_layouts/core-01.html
@@ -24,7 +24,7 @@
 {% include skiplinks/skiplinks.html %}
 {% include header/header.html %}
 {{ content }}
-{% include footers/footer.html %}
+{% include footers-01/footer.html %}
 {% include resources-inc/footer.html %}
 </body>
 </html>
