--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,15 @@ layout: core
 	{%- endif -%}
 {%- endcapture -%}
 	<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="{% if page.layout == "post" %}Blog{% else %}WebPageElement{%  endif %}">
-		<h1 class="gc-thickline" id="wb-cont" property="name{% if page.layout == "post" %} headline{% endif %}">{{ page-title }}</h1>
+		{%- if page.layout == "post" -%}
+		<h1 property="name" id="wb-cont" property="name headline" dir="ltr">
+			<span class="stacked">
+				<span>{{ page-title }}</span>: <span>{{ site.title[ page.lang ] }}</span>
+			</span>
+		</h1>
+		{%- else -%}
+		<h1 class="gc-thickline" id="wb-cont">{{ page-title }}</h1>
+		{%- endif -%}
 		{{ content }}
 		{% include page-details/footer.html %}
 	</main>
