--- a/en/css/blog.css
+++ b/en/css/blog.css
@@ -1,8 +1,9 @@
-.cnt-wdth-lmtd main figure,
+.cnt-wdth-lmtd main .panel,
 .cnt-wdth-lmtd main details,
-.cnt-wdth-lmtd main .panel {
+.cnt-wdth-lmtd main figure {
 	max-width: 65ch;
 }
+
 figure.gc-complex-img {
 	background-color: #fff;
 	border: 1px solid transparent;
@@ -14,6 +15,7 @@ figure.gc-complex-img {
 	padding: 15px;
 	position: relative;
 }
+
 .gc-complex-img img {
 	display: block;
 	height: auto;
@@ -21,14 +23,17 @@ figure.gc-complex-img {
 	margin-right: auto;
 	max-width: 100%;
 }
+
 .gc-complex-img figcaption {
 	margin-top: 15px;
 }
+
 .gc-complex-img figcaption details {
 	margin-bottom: 0;
 }
+
 .gc-complex-img figcaption summary::after {
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(0, 0, 0, 0);
 	bottom: 0;
 	content: "";
 	left: 0;
@@ -38,7 +43,43 @@ figure.gc-complex-img {
 	top: 0;
 	z-index: 1;
 }
+
 #wb-dtmd.dl-horizontal dd {
 	display: block;
 	max-width: 11ch;
+}
+
+/* Stacked H1 */
+h1 {
+	border-bottom: none;
+}
+
+h1#wb-cont::after {
+	content: ""; /* This is necessary for the pseudo element to work. */
+	display: block; /* This will put the pseudo element on its own line. */
+	width: 70px; /* Change this to whatever width you want to have before hover. */
+	padding-bottom: 8px; /* This creates some space between the element and the border. */
+	border-bottom: 0.18em solid #af3c43; /* This creates the border. Replace black with whatever color you want. */
+}
+
+h1 span.stacked {
+	display: flex;
+	flex-direction: column-reverse;
+	margin-left: -9999px;
+}
+
+h1 span.stacked span:nth-child(1) {
+	margin-top: -1.1em;
+}
+
+h1 span.stacked span:nth-child(1),
+h1 span.stacked span:nth-child(2) {
+	margin-left: 9999px;
+}
+
+h1 span.stacked span:nth-child(2) {
+	font-size: 26px;
+	color: #555;
+	font-weight: 500;
+	margin-bottom: 0.17em;
 }
