--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 		</ul>
 		<h2 id="{{ locales.signup[ page.lang ] | downcase | replace: ' ', '-' }}">{{ locales.signup[ page.lang ] }}</h2>
 		<div class="row">
-			<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="col-8-md validate paddingc" target="_blank" novalidate>
+			<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="col-sm-8 validate paddingc" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll" class="well well-sm">
 					<fieldset class="gc-chckbxrdio">
 						<legend>{{ locales.emailtype[ page.lang ] }}</legend>
