--- a/_includes/components/gc-simple-img.html
+++ b/_includes/components/gc-simple-img.html
@@ -1,4 +1,4 @@
-{%- assign file = site.static_files | where: "lang", page.language | find_exp: "item", "item.path contains include.file" -%}
+{%- assign file = site.static_files | where: "language", page.language | find_exp: "item", "item.path contains include.file" -%}
 <div class="panel panel-default">
 	<figure class="panel-body">
 		<img class="img-responsive center-block" alt="{{ include.alt }}" title="{{ include.alt }}" src="{{ file.path | remove_first: '/' | remove_first: page.language }}">
