Set blog-dto-btn.css as default CSS

--- a/fr/css/blog-dto-btn.css
+++ b/fr/css/blog-dto-btn.css
@@ -265,6 +265,11 @@ main {
 	padding: 0px !important;
 }
 
+#wb-dtmd.dl-horizontal dd {
+	display: block;
+	max-width: 11ch;
+}
+
 @media only screen and (min-width: 992px) {
 	.blog-list {
 		margin-top: 1.8em;
