--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@ layout: core
 			<span class="stacked">
 				{{ page-title }}
 				{%- if page.section-title -%}
-					: {{ page.section-title }}
+					: echo page section title {{ page.section-title }}
 				{%- else -%}
-					: {{ site.title[ page.language ] }}
+					: echo site title page land {{ site.title[ page.language ] }}
 				{%- endif -%}
 				</span>
 			</span>
