--- a/_includes/resources-inc/footer.html
+++ b/_includes/resources-inc/footer.html
@@ -9,3 +9,4 @@
 	<script src="{{ page.script }}"></script>
 {%- endif -%}
 {% if site.analytics.adobe %}{% include /providers/adobefooter.html %}{% endif %}
+<script type="text/javascript">_satellite.pageBottom();</script>
