--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -14,7 +14,14 @@
 <meta name="dcterms.description" content="{{ site.description[ page.language ] }}" />
 {%- endif %}
 {%- if page.author %}
-<meta name="dcterms.creator" content="{{ page.author }}"/>
+<!-- <meta name="dcterms.creator" content="{{ page.author }}"/> -->
+{%- if page.language == "en" %}
+<meta name="dcterms.creator" content="Employment and Social Development Canada"/>
+{%- else %}
+<meta name="dcterms.creator" content="Emploi et Développement social Canada"/>
+{%- endif %}
+<meta name="dcterms.accessRights” content="2"/>
+<meta name= "gcaaterms.sitename" content="ESDC-EDSC_Canada-Blog"/>
 <meta name="author" content="{{ page.author }}"/>
 {% elsif site.author %}
 <meta name="dcterms.creator" content="{{ site.author[ page.language ] }}"/>
