--- a/_includes/providers/adobehead.html
+++ b/_includes/providers/adobehead.html
@@ -1,2 +1,1 @@
-<script src="//assets.adobedtm.com/be5dfd287373/0127575cd23a/launch-f7c3e6060667.min.js"></script>
-<!-- <script defer src="//assets.adobedtm.com/{{ site.analytics.adobe.tracking_id }}{{ site.analytics.adobe.staging }}.js"></script> -->
+<script defer src="//assets.adobedtm.com/{{ site.analytics.provider.adobe.tracking_id }}.min.js"></script>
