--- a/_includes/providers/adobehead.html
+++ b/_includes/providers/adobehead.html
@@ -1,1 +1,1 @@
-<script defer src="//assets.adobedtm.com/{{ site.analytics.adobe.tracking_id }}{{ site.analytics.adobe.staging }}.min.js"></script>
+<script defer src="//assets.adobedtm.com/{{ site.analytics.provider.adobe.tracking_id }}.min.js"></script>
